platform/modules/policy-reporter/manifests.yaml
---
# Source: policy-reporter/templates/plugins/kyverno/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter-kyverno-plugin
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter-kyverno-plugin
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: policy-reporter-kyverno-plugin
    app.kubernetes.io/instance: policy-reporter
---
# Source: policy-reporter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/component: reporting
    app.kubernetes.io/part-of: policy-reporter
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: policy-reporter
    app.kubernetes.io/instance: policy-reporter
---
# Source: policy-reporter/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter-ui
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: policy-reporter-ui
    app.kubernetes.io/instance: policy-reporter
---
# Source: policy-reporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-reporter
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/component: reporting
    app.kubernetes.io/part-of: policy-reporter
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter
      app.kubernetes.io/instance: policy-reporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: policy-reporter
        app.kubernetes.io/instance: policy-reporter
        app.kubernetes.io/version: "3.8.1"
        app.kubernetes.io/part-of: policy-reporter
        helm.sh/chart: policy-reporter-3.8.1
      annotations:
        checksum/secret: "9730cb7496822d8f2a73f3808e60882f804cdba531308da7fc88f7319cdb54d7"
    spec:
      serviceAccountName: policy-reporter
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1234
      containers:
        - name: policy-reporter
          image: "ghcr.io/ghcr.io/kyverno/policy-reporter:3.8.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1234
            seccompProfile:
              type: RuntimeDefault
          args:
            - --port=8080
            - --config=/app/config.yaml
            - --dbfile=/sqlite/database.db
            - --metrics-enabled=false
            - --rest-enabled=true
            - --profile=false
            - --lease-name=policy-reporter
            - --template-dir=/app/templates
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
          volumeMounts:
          - name: sqlite
            mountPath: /sqlite
          - name: config-file
            mountPath: /app/config.yaml
            subPath: config.yaml
            readOnly: true
          - name: tmp
            mountPath: /tmp
      volumes:
      - name: sqlite
        emptyDir: {}
      - name: config-file
        secret:
          secretName: policy-reporter-config
          optional: true
      - name: tmp
        emptyDir: {}
---
# Source: policy-reporter/templates/plugins/kyverno/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-reporter-kyverno-plugin
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter-kyverno-plugin
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter-kyverno-plugin
      app.kubernetes.io/instance: policy-reporter
  template:
    metadata:
      annotations:
        checksum/secret: "0bd35fe52875a3014499eea225331cac5e1c0741da344923c65982b26383baa6"
      labels:
        app.kubernetes.io/name: policy-reporter-kyverno-plugin
        app.kubernetes.io/instance: policy-reporter
        app.kubernetes.io/version: "3.8.1"
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: policy-reporter-3.8.1
    spec:
      serviceAccountName: policy-reporter-kyverno-plugin
      automountServiceAccountToken: true
      securityContext:
        runAsGroup: 1234
        runAsUser: 1234
      containers:
        - name: policy-reporter-kyverno-plugin
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1234
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/kyverno/policy-reporter/kyverno-plugin:0.6.2"
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --config=/app/config.yaml
            - --port=8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/policies
              port: http
          readinessProbe:
            httpGet:
              path: /v1/policies
              port: http
          resources:
            {}
          volumeMounts:
          - name: config-file
            mountPath: /app/config.yaml
            subPath: config.yaml
            readOnly: true
      volumes:
      - name: config-file
        secret:
          secretName: policy-reporter-kyverno-plugin-config
          optional: true
---
# Source: policy-reporter/templates/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  labels:
    app.kubernetes.io/name: policy-reporter-ui
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "3.8.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: policy-reporter-3.8.1
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: policy-reporter-ui
      app.kubernetes.io/instance: policy-reporter
  template:
    metadata:
      annotations:
        checksum/secret: "b00f16ac2827bbe8e620fa9ef977136b767fd0e70d64cc38c22e9b17d86cee7b"
        checksum/cluster-secret: "3583ec4da77b7ec9fa48d487346cf3643b205a64ae5582c0170e12c9bc677875"
      labels:
        app.kubernetes.io/name: policy-reporter-ui
        app.kubernetes.io/instance: policy-reporter
        app.kubernetes.io/version: "3.8.1"
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: policy-reporter-3.8.1
    spec:
      serviceAccountName: policy-reporter-ui
      automountServiceAccountToken: true
      securityContext:
        runAsGroup: 1234
        runAsUser: 1234
      containers:
        - name: policy-reporter-ui
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1234
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/kyverno/policy-reporter-ui:2.6.1"
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --config=/app/config.yaml
            - --port=8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
          volumeMounts:
          - name: config-file
            mountPath: /app/config.yaml
            subPath: config.yaml
            readOnly: true
          - name: tmp
            mountPath: /tmp
      volumes:
      - name: config-file
        secret:
          secretName: policy-reporter-ui-config
          optional: true
      - name: tmp
        emptyDir: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  labels:
    app.kubernetes.io/part-of: sre-platform
    app.kubernetes.io/managed-by: srectl
    sre.platform.io/component: policy-reporter
  annotations:
    sre-platform.io/ingress-type: policy-reporter-ui
spec:

  ingressClassName: nginx
  rules:
    - host: policy-reporter.139.162.145.158.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
